Compiler/tests/bad/Variables/08_variable.rs
struct Point2D
{
    x:i32,
    y:bool
}

fn main(){
    let x : Vec3<i32> = false;
}
